--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600;700&family=Noto+Sans+KR&family=Varela+Round&display=swap" rel="stylesheet">
 
 	<!-- Custom styles CSS -->
+	<link href="css/style.css" rel="stylesheet" media="screen">
 
 
 </head>
