トップビジュアルのコーディング

--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 	* 1. トップビジュアル
 -------------------------------------------------->
 	<!-- トップ問題①「idをつける」-->
-		<section>
+		<section id="top">
 			<!-- トップ問題①「classをつける」 -->
-			<div>
+			<div class="top-item">
 				<!-- ↓↓↓トップ問題②「imgタグ、pタグを作る」↓↓↓-->
 				<!-- ↑↑↑トップ問題②「imgタグ、pタグを作る」↓↓↓-->
+				<img src="/images/logo.png" alt="">
+				<p class="top-item__main">Hello. I’m SAMPLE</p>
+				<p class="top-item__sub">『キャッチコピー』<br>
+					あなたと繋がる、楽しいWeb制作を。</p>
 			</div>
 			<!-- 動くマウスの記述 -->
 			<div class="mouse-icon">
