ナビバーのコーティング

--- a/index.html
+++ b/index.html
@@ -65,7 +65,26 @@
 	<header>
 
 		<!-- ↓↓↓この中にBootstrapのナビをコピペ↓↓↓ -->
-
+		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+			<div class="container">
+				<h1>
+					<a class="navbar-brand" href="#">SAMPLE</a>
+				</h1>
+				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navbar" aria-controls="Navbar" aria-expanded="false" aria-label="ナビゲーションの切替">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="Navbar">
+					<ul class="nav nav-pills flex-column flex-lg-row ml-auto">
+						<li class="nav-item"><a class="nav-link" href="#top">home</a></li>
+						<li class="nav-item"><a class="nav-link" href="#about">about</a></li>
+						<li class="nav-item"><a class="nav-link" href="#portfolio">portfolio</a></li>
+						<li class="nav-item"><a class="nav-link" href="#service">service</a></li>
+						<li class="nav-item"><a class="nav-link" href="#price">price</a></li>
+						<li class="nav-item"><a class="nav-link" href="#contact">contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 		<!-- ↑↑↑この中にBootstrapのナビをコピペ ↑↑↑-->
 
 	</header>
