メッセージエリア見出しのコーティング

--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
 			<div class="container">
 
 				<!-- ↓↓↓この中にmodule__headerを記述↓↓↓ -->
-
+				<div class="module__header">
+					<h2 class="module__title">
+						Message
+						<span>Message</span>
+					</h2>
+					<div class="module__line"></div>
+				</div>
 				<!-- ↑↑↑この中にmodule__headerを記述↑↑↑-->
 
 			</div><!-- .container -->
