メッセージエリアのコーティング

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	* 3. Message
 -------------------------------------------------->
 		<section id="message" class="module" >
-			<div class="container">
+			<div class="container text-center my-5">
 
 				<!-- ↓↓↓この中にmodule__headerを記述↓↓↓ -->
 				<div class="module__header">
@@ -105,6 +105,24 @@
 					</h2>
 					<div class="module__line"></div>
 				</div>
+				<p class="mt-4">
+					初めまして、はせと申します<br>
+					Web系フリーランスエンジニアとして<br>
+					活動しています。
+				</p>
+				<p class="mt-4">
+					趣味は料理をすることで<br>
+					得意なことは時短。
+				</p>
+				<p class="mt-4">
+					作業を効率化し<br>
+					あなたとのコミュニケーションを増やすことで
+				</p>
+				<p class="mt-4">
+					思い描いた通りの<br>
+					理想のホームページを作る<br>
+					お手伝いをいたします。
+				</p>
 				<!-- ↑↑↑この中にmodule__headerを記述↑↑↑-->
 
 			</div><!-- .container -->
