sticky-topの記述変更

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 	* 2. ナビバー
 -------------------------------------------------->
 
-	<header>
+	<header class="sticky-top">
 
 		<!-- ↓↓↓この中にBootstrapのナビをコピペ↓↓↓ -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
 				<h1>
 					<a class="navbar-brand" href="#">SAMPLE</a>
