--- a/index.html
+++ b/index.html
@@ -135,7 +135,50 @@
 		<section id="about" class="module" style="margin-top: -80px;">
 
 			<!-- ↓↓↓グリッドレイアウトを使って組み立てる↓↓↓ -->
+				<div class="row">
+					<div class="col-lg-6 about-box__img">
 
+					</div>
+					<div class="col-lg-6 about-box__text">
+						<div class="module__header">
+							<h2 class="module__title">
+								About me
+								<span>About</span>
+							</h2>
+							<div class="module__line"></div>
+						</div>
+
+						<section class="about-item">
+							<div class="about-item__icon">
+								<i class="fas fa-snowboarding"></i>
+							</div>
+							<div class="about-item__box">
+								<h3 class="about-item__title">名前 <a href="https://twitter.com/hase07_prog">@hase07_prog</a></h3>
+								<p class="about-item__desc">
+									埼玉県育ち、埼玉県在住、Web開発、Web制作の仕事を中心に活動中
+								</p>
+								<p class="about-item__desc">
+									趣味は、音楽を聴くこと。進撃の巨人を見たりゆったりとした生活が好きです
+								</p>
+							</div>
+						</section>
+
+						<section class="about-item">
+							<div class="about-item__icon">
+								<i class="fas fa-paint-brush"></i>
+							</div>
+							<div class="about-item__box">
+								<h3 class="about-item__title">Status</h3>
+								<ul class="about-item__desc pl-0 list-unstyled">
+									<li><i class="fas fa-check-square mr-2"> 埼玉県出身、23歳</i></li>
+									<li><i class="fas fa-check-square mr-2"> 現在の拠点活動は、東京</i></li>
+									<li><i class="fas fa-check-square mr-2"> ブログ「<a href="https://ohayouhase.hatenablog.com/">おはようはせ</a>」を運営中</i></li>
+								</ul>
+							</div>
+						</section>
+
+					</div>
+				</div>
 			<!-- ↑↑↑グリッドレイアウトを使って組み立てる↑↑↑ -->
 
 		</section>
