--- a/index.html
+++ b/index.html
@@ -187,13 +187,175 @@
 <!------------------------------------------------
 	* 5. Works（portfolio）
 -------------------------------------------------->
+<section id="portfolio" class="module">
+	<div class="container">
+		<div class="module__header">
+			<h2 class="module__title">
+				My Works
+				<span>Portfolio</span>
+			</h2>
+			<div class="module__line"></div>
+		</div>
 
+		<div class="row justify-content-center">
+
+			<section class="col-lg-4 mt-3">
+				<a href="">
+					<div class="works-item">
+						<img src="/images/works_01.jpg" alt="">
+						<div class="works-item__overlay">
+							<div class="works-item__inner">
+								<h3 class="works-item__title">カードのタイトル</h3>
+								<p class="works-item__desc">ここにカードの説明文が入ります</p>
+							</div>
+						</div>
+					</div>
+				</a>
+			</section>
+
+			<section class="col-lg-4 mt-3">
+				<a href="">
+					<div class="works-item">
+						<img src="/images/works_01.jpg" alt="">
+						<div class="works-item__overlay">
+							<div class="works-item__inner">
+								<h3 class="works-item__title">カードのタイトル</h3>
+								<p class="works-item__desc">ここにカードの説明文が入ります</p>
+							</div>
+						</div>
+					</div>
+				</a>
+			</section>
+
+			<section class="col-lg-4 mt-3">
+				<a href="">
+					<div class="works-item">
+						<img src="/images/works_01.jpg" alt="">
+						<div class="works-item__overlay">
+							<div class="works-item__inner">
+								<h3 class="works-item__title">カードのタイトル</h3>
+								<p class="works-item__desc">ここにカードの説明文が入ります</p>
+							</div>
+						</div>
+					</div>
+				</a>
+			</section>
+		</div>
+
+		<div class="row justify-content-center">
+
+			<section class="col-lg-4 mt-3">
+				<a href="">
+					<div class="works-item">
+						<img src="/images/works_01.jpg" alt="">
+						<div class="works-item__overlay">
+							<div class="works-item__inner">
+								<h3 class="works-item__title">カードのタイトル</h3>
+								<p class="works-item__desc">ここにカードの説明文が入ります</p>
+							</div>
+						</div>
+					</div>
+				</a>
+			</section>
+
+			<section class="col-lg-4 mt-3">
+				<a href="">
+					<div class="works-item">
+						<img src="/images/works_01.jpg" alt="">
+						<div class="works-item__overlay">
+							<div class="works-item__inner">
+								<h3 class="works-item__title">カードのタイトル</h3>
+								<p class="works-item__desc">ここにカードの説明文が入ります</p>
+							</div>
+						</div>
+					</div>
+				</a>
+			</section>
+		</div>
+
+	</div>
+
+</section>
 
 
 <!------------------------------------------------
 	* 6. Service
 -------------------------------------------------->
+<section id="service" class="module">
+	<div class="container">
+		<div class="module__header">
+			<h2 class="module__title">
+				My Service
+				<span>Service</span>
+			</h2>
+			<div class="module__line"></div>
+		</div>
 
+		<div class="row">
+
+			<div class="col-md-4">
+				<div class="service-card">
+					<div class="service-card__icon">
+						<i class="fab fa-wordpress"></i>
+					</div>
+					<h3 class="service-card__title">WordPress</h3>
+					<p class="service-card__copy">
+						CMS「WordPress」を利用したWebサイトの構築が可能です。テンプレートテーマを用いたサイト制作、オリジナルテーマの制作が可能です。
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+					<div class="service-card">
+						<div class="service-card__icon">
+							<i class="fab fa-php"></i>
+						</div>
+						<h3 class="service-card__title">PHP/MySQL</h3>
+						<p class="service-card__copy">
+							PHPを使ってデータベースと連携したWebサイト/Webサービスを制作します。ログイン機能から、コンテンツ管理まで柔軟に対応いたします。
+						</p>
+					</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="service-card">
+					<div class="service-card__icon">
+						<i class="fab fa-adobe"></i>
+					</div>
+					<h3 class="service-card__title">Photoshop</h3>
+					<p class="service-card__copy">
+						Photoshopを使ったデザイン制作が可能です。写真の加工、UIパーツ、ロゴ・バナー制作、Webサイトデザインなど。PNG/JPEGなどの書き出しも可能です。
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="service-card">
+					<div class="service-card__icon">
+						<i class="fab fa-twitter"></i>
+					</div>
+					<h3 class="service-card__title">Twitter API</h3>
+					<p class="service-card__copy">
+						TwitterAPIを利用したログイン認証の実装が可能です。icon、フォロー数、フォロワー数、など様々な情報を取得できます。
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="service-card">
+					<div class="service-card__icon">
+						<i class="fas fa-palette"></i>
+					</div>
+					<h3 class="service-card__title">Design</h3>
+					<p class="service-card__copy">
+						Webデザイン、ホームページ制作、ランディングページの制作。バナー、ロゴ、アプリデザインが可能です。
+					</p>
+				</div>
+			</div>
+
+			</div>
+	</div>
+</section>
 
 
 <!------------------------------------------------
