--- a/index.html
+++ b/index.html
@@ -361,7 +361,48 @@
 <!------------------------------------------------
 	* 7. Price
 -------------------------------------------------->
+<section id="price" class="module">
+	<div class="container">
+		<div class="module__header">
+			<h2 class="module__title">
+				Price
+				<span>Price</span>
+			</h2>
+			<div class="module__line"></div>
+			<p>
+				Web制作の参考価格です。<br>
+				柔軟に対応いたしますので、まずはお気軽にご相談ください。
+			</p>
+		</div>
 
+		<table>
+			<thead>
+					<tr>
+							<td class="non"></td>
+							<th scope="col">内容</th>
+							<th scope="col">価格(月額)</th>
+					</tr>
+			</thead>
+			<tbody>
+					<tr>
+							<th>ベーシックプラン</th>
+							<td data-label="内容" class="txt">はじめての方向け。ベーシックなお試しプラン</td>
+							<td data-label="価格" class="price">¥3,000</td>
+					</tr>
+					<tr>
+							<th>カスタムプラン</th>
+							<td data-label="内容" class="txt">必要なものだけ揃えられるカスタムプラン</td>
+							<td data-label="価格"class="price">¥4,000</td>
+					</tr>
+					<tr>
+							<th>プレミアムプラン</th>
+							<td data-label="内容" class="txt">全ておまかせのプレミアムプラン</td>
+							<td data-label="価格"class="price">¥10,000</td>
+					</tr>
+			</tbody>
+		</table>
+	</div>
+</section>
 
 <!------------------------------------------------
 	* 8. Contact
