フーターのコーディング

--- a/index.html
+++ b/index.html
@@ -447,7 +447,15 @@
 	* 9. Footer
 -------------------------------------------------->
 	<footer>
-
+		<div class="container text-center">
+			<ul class="social-links d-flex justify-content-center list-unstyled">
+				<li><a href="https://www.facebook.com/yuki.hasegawa07"><i class="fab fa-facebook-f"></i></a></li>
+				<li><a href="https://twitter.com/hase07_prog"><i class="fab fa-twitter"></i></a></li>
+			</ul>
+			<p class="text-center">
+				<small lang="en">© 2020 SAMPLE.</small>
+			</p>
+		</div>
 	</footer>
 
 	<!-- Optional JavaScript -->
