スクロールスパイのコーディング
Bootstrapのスクロールスパイをとりいれた

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#Navbar"hub>
 
 <!------------------------------------------------
 		1. トップビジュアル
