--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<!-- Custom styles CSS -->
 	<link href="css/style.css" rel="stylesheet" media="screen">
 
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 </head>
 
@@ -48,8 +50,8 @@
 				<!-- ↓↓↓トップ問題②「imgタグ、pタグを作る」↓↓↓-->
 				<!-- ↑↑↑トップ問題②「imgタグ、pタグを作る」↓↓↓-->
 				<img src="/images/logo.png" alt="">
-				<p class="top-item__main">Hello. I’m SAMPLE</p>
-				<p class="top-item__sub">『キャッチコピー』<br>
+				<p class="top-item__main typ">Hello. I’m SAMPLE</p>
+				<p class="top-item__sub typ">『キャッチコピー』<br>
 					あなたと繋がる、楽しいWeb制作を。</p>
 			</div>
 			<!-- 動くマウスの記述 -->
@@ -473,7 +475,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
 	<!-- function.js -->
-	<!-- <script src="js/function.js"></script> -->
+	<script src="js/function.js"></script>
 
 </body>
 
