見出しのフォント変更

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 	<!-- Custom styles CSS -->
 	<link href="css/style.css" rel="stylesheet" media="screen">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
