fadeInで文字を表示

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
+	<!-- animate.css -->
+	<link href="css/animate.css" rel="stylesheet">
+
+	<!-- wow.min.min.js -->
+	<script src="js/wow.min.js"></script>
+
 </head>
 
 <body data-spy="scroll" data-target="#Navbar"hub>
@@ -101,27 +107,27 @@
 			<div class="container text-center my-5">
 
 				<!-- ↓↓↓この中にmodule__headerを記述↓↓↓ -->
-				<div class="module__header">
+				<div class="module__header wow fadeInUp" data-wow-delay=".1s">
 					<h2 class="module__title">
 						Message
 						<span>Message</span>
 					</h2>
 					<div class="module__line"></div>
 				</div>
-				<p class="mt-4">
+				<p class="mt-4 wow fadeInUp wow fadeInUp" data-wow-delay=".1s">
 					初めまして、はせと申します<br>
 					Web系フリーランスエンジニアとして<br>
 					活動しています。
 				</p>
-				<p class="mt-4">
+				<p class="mt-4 wow fadeInUp wow fadeInUp" data-wow-delay=".1s">
 					趣味は料理をすることで<br>
 					得意なことは時短。
 				</p>
-				<p class="mt-4">
+				<p class="mt-4 wow fadeInUp wow fadeInUp" data-wow-delay=".1s">
 					作業を効率化し<br>
 					あなたとのコミュニケーションを増やすことで
 				</p>
-				<p class="mt-4">
+				<p class="mt-4 wow fadeInUp wow fadeInUp" data-wow-delay=".1s">
 					思い描いた通りの<br>
 					理想のホームページを作る<br>
 					お手伝いをいたします。
