About meのフェードイン

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 					</div>
 					<div class="col-lg-6 about-box__text">
-						<div class="module__header">
+						<div class="module__header wow fadeInUp" data-wow-delay=".1s">
 							<h2 class="module__title">
 								About me
 								<span>About</span>
@@ -161,7 +161,7 @@
 							<div class="about-item__icon">
 								<i class="fas fa-snowboarding"></i>
 							</div>
-							<div class="about-item__box">
+							<div class="about-item__box wow fadeInUp" data-wow-delay=".1s">
 								<h3 class="about-item__title">名前 <a href="https://twitter.com/hase07_prog">@hase07_prog</a></h3>
 								<p class="about-item__desc">
 									埼玉県育ち、埼玉県在住、Web開発、Web制作の仕事を中心に活動中
@@ -176,7 +176,7 @@
 							<div class="about-item__icon">
 								<i class="fas fa-paint-brush"></i>
 							</div>
-							<div class="about-item__box">
+							<div class="about-item__box wow fadeInUp" data-wow-delay=".1s">
 								<h3 class="about-item__title">Status</h3>
 								<ul class="about-item__desc pl-0 list-unstyled">
 									<li><i class="fas fa-check-square mr-2"> 埼玉県出身、23歳</i></li>
