--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 -------------------------------------------------->
 <section id="portfolio" class="module">
 	<div class="container">
-		<div class="module__header">
+		<div class="module__header wow fadeInUp">
 			<h2 class="module__title">
 				My Works
 				<span>Portfolio</span>
@@ -208,7 +208,7 @@
 
 		<div class="row justify-content-center">
 
-			<section class="col-lg-4 mt-3">
+			<section class="col-lg-4 mt-3 wow fadeInUp" data-wow-delay=".1s">
 				<a href="">
 					<div class="works-item">
 						<img src="/images/works_01.jpg" alt="">
@@ -222,7 +222,7 @@
 				</a>
 			</section>
 
-			<section class="col-lg-4 mt-3">
+			<section class="col-lg-4 mt-3 wow fadeInUp" data-wow-delay=".2s">
 				<a href="">
 					<div class="works-item">
 						<img src="/images/works_01.jpg" alt="">
@@ -236,7 +236,7 @@
 				</a>
 			</section>
 
-			<section class="col-lg-4 mt-3">
+			<section class="col-lg-4 mt-3 wow fadeInUp" data-wow-delay=".3s">
 				<a href="">
 					<div class="works-item">
 						<img src="/images/works_01.jpg" alt="">
@@ -253,7 +253,7 @@
 
 		<div class="row justify-content-center">
 
-			<section class="col-lg-4 mt-3">
+			<section class="col-lg-4 mt-3 wow fadeInUp">
 				<a href="">
 					<div class="works-item">
 						<img src="/images/works_01.jpg" alt="">
@@ -267,7 +267,7 @@
 				</a>
 			</section>
 
-			<section class="col-lg-4 mt-3">
+			<section class="col-lg-4 mt-3 wow fadeInUp" data-wow-delay=".1s">
 				<a href="">
 					<div class="works-item">
 						<img src="/images/works_01.jpg" alt="">
