--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 -------------------------------------------------->
 <section id="service" class="module">
 	<div class="container">
-		<div class="module__header">
+		<div class="module__header wow fadeInUp" data-wow-delay=".1s">
 			<h2 class="module__title">
 				My Service
 				<span>Service</span>
@@ -302,7 +302,7 @@
 
 		<div class="row">
 
-			<div class="col-md-4">
+			<div class="col-md-4 wow fadeInUp" data-wow-delay=".1s">
 				<div class="service-card">
 					<div class="service-card__icon">
 						<i class="fab fa-wordpress"></i>
@@ -314,7 +314,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 wow fadeInUp" data-wow-delay=".2s">
 					<div class="service-card">
 						<div class="service-card__icon">
 							<i class="fab fa-php"></i>
@@ -326,7 +326,7 @@
 					</div>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 wow fadeInUp" data-wow-delay=".3s">
 				<div class="service-card">
 					<div class="service-card__icon">
 						<i class="fab fa-adobe"></i>
@@ -338,7 +338,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 wow fadeInUp" data-wow-delay=".4s">
 				<div class="service-card">
 					<div class="service-card__icon">
 						<i class="fab fa-twitter"></i>
@@ -350,7 +350,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 wow fadeInUp" data-wow-delay=".5s">
 				<div class="service-card">
 					<div class="service-card__icon">
 						<i class="fas fa-palette"></i>
