--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
 -------------------------------------------------->
 <section id="price" class="module">
 	<div class="container">
-		<div class="module__header">
+		<div class="module__header wow fadeInUp" data-wow-delay=".1s">
 			<h2 class="module__title">
 				Price
 				<span>Price</span>
 			</h2>
 			<div class="module__line"></div>
-			<p>
+			<p class="wow fadeInUp">
 				Web制作の参考価格です。<br>
 				柔軟に対応いたしますので、まずはお気軽にご相談ください。
 			</p>
@@ -386,24 +386,24 @@
 
 		<table>
 			<thead>
-					<tr>
+					<tr class="wow fadeInUp" data-wow-delay=".1s">
 							<td class="non"></td>
 							<th scope="col">内容</th>
 							<th scope="col">価格(月額)</th>
 					</tr>
 			</thead>
 			<tbody>
-					<tr>
+					<tr class="wow fadeInUp" data-wow-delay=".1s">
 							<th>ベーシックプラン</th>
 							<td data-label="内容" class="txt">はじめての方向け。ベーシックなお試しプラン</td>
 							<td data-label="価格" class="price">¥3,000</td>
 					</tr>
-					<tr>
+					<tr class="wow fadeInUp" data-wow-delay=".2s">
 							<th>カスタムプラン</th>
 							<td data-label="内容" class="txt">必要なものだけ揃えられるカスタムプラン</td>
 							<td data-label="価格"class="price">¥4,000</td>
 					</tr>
-					<tr>
+					<tr class="wow fadeInUp" data-wow-delay=".3s">
 							<th>プレミアムプラン</th>
 							<td data-label="内容" class="txt">全ておまかせのプレミアムプラン</td>
 							<td data-label="価格"class="price">¥10,000</td>
