--- a/index.html
+++ b/index.html
@@ -418,30 +418,30 @@
 -------------------------------------------------->
 <section id="contact" class="module">
 	<div class="container">
-		<div class="module__header">
+		<div class="module__header wow fadeInUp">
 			<h2 class="module__title">
 				Contact
 				<span>Contact</span>
 			</h2>
 			<div class="module__line"></div>
-			<p>
+			<p class="wow fadeInUp" data-wow-delay=".1s">
 				お仕事のご相談、ご依頼などお気軽にお問い合わせください。
 			</p>
 		</div>
 
 		<form id="contact-form" action="mail.php" method="post">
-			<div class="form-group">
+			<div class="form-group wow fadeInUp" data-wow-delay=".1s">
 				<label class="sr-only" for="name">Name</label>
 				<input type="text" id="name" class="form-control" name="name"" placeholder="name" required>
 			</div>
-			<div class="form-group">
+			<div class="form-group wow fadeInUp" data-wow-delay=".2s">
 				<label class="sr-only" for="email">Email address</label>
 				<input type="email" id="email" class="form-control" name="mail" placeholder="e-mail" required>
 			</div>
-			<div class="form-group">
+			<div class="form-group wow fadeInUp" data-wow-delay=".3s">
 				<textarea class="form-control" id="c_message" name="content" rows="7" placeholder="your message" required></textarea>
 			</div>
-			<button type="submit" class="btn btn-block btn-custom-2">Send Message</button>
+			<button type="submit" class="btn btn-block btn-custom-2 wow fadeInUp" data-wow-delay=".4s">Send Message</button>
 		</form>
 
 	</div>
