--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@
 	<footer>
 		<div class="container text-center">
 			<ul class="social-links d-flex justify-content-center list-unstyled">
-				<li><a href="https://www.facebook.com/yuki.hasegawa07"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="https://twitter.com/hase07_prog"><i class="fab fa-twitter"></i></a></li>
+				<li class="wow fadeInUp" data-wow-delay=".1s"><a href="https://www.facebook.com/yuki.hasegawa07"><i class="fab fa-facebook-f"></i></a></li>
+				<li class="wow fadeInUp" data-wow-delay=".2s"><a href="https://twitter.com/hase07_prog"><i class="fab fa-twitter"></i></a></li>
 			</ul>
-			<p class="text-center">
+			<p class="text-center wow fadeInUp" data-wow-delay=".1s">
 				<small lang="en">© 2020 SAMPLE.</small>
 			</p>
 		</div>
