--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
 	<!-- animate.css -->
 	<link href="css/animate.css" rel="stylesheet">
 
-	<!-- wow.min.min.js -->
-	<script src="js/wow.min.js"></script>
 
 </head>
 
-<body data-spy="scroll" data-target="#Navbar"hub>
+<body data-spy="scroll" data-target="#Navbar">
 
 <!------------------------------------------------
 		1. トップビジュアル
@@ -51,6 +49,7 @@
 	* 1. トップビジュアル
 -------------------------------------------------->
 	<!-- トップ問題①「idをつける」-->
+	<div id="youtube-wrap">
 		<section id="top">
 			<!-- トップ問題①「classをつける」 -->
 			<div class="top-item">
@@ -66,6 +65,25 @@
 				<div class="wheel"></div>
 			</div>
 		</section>
+		<!-- ↓↓↓Youtube背景↓↓↓-->
+		<div id="youtube" data-property="{
+			videoURL: 'https://youtu.be/jbBVV-BGtfY',
+			containment: '#youtube-wrap',
+			autoPlay: true,
+			stopMovieOnBlur: false,
+			loop: 1,
+			mute: true,
+			startAt: 96,
+			opacity: 1,
+			showControls: false,
+			showYTLogo: false,
+			onReady: function( player ) {
+				$('.loading').hide('slow');
+			}
+			}">
+		</div>
+		<!-- ↑↑↑Youtube背景↑↑↑-->
+	</div>
 
 <!------------------------------------------------
 	* 2. ナビバー
@@ -401,12 +419,12 @@
 					<tr class="wow fadeInUp" data-wow-delay=".2s">
 							<th>カスタムプラン</th>
 							<td data-label="内容" class="txt">必要なものだけ揃えられるカスタムプラン</td>
-							<td data-label="価格"class="price">¥4,000</td>
+							<td data-label="価格" class="price">¥4,000</td>
 					</tr>
 					<tr class="wow fadeInUp" data-wow-delay=".3s">
 							<th>プレミアムプラン</th>
 							<td data-label="内容" class="txt">全ておまかせのプレミアムプラン</td>
-							<td data-label="価格"class="price">¥10,000</td>
+							<td data-label="価格" class="price">¥10,000</td>
 					</tr>
 			</tbody>
 		</table>
@@ -432,7 +450,7 @@
 		<form id="contact-form" action="mail.php" method="post">
 			<div class="form-group wow fadeInUp" data-wow-delay=".1s">
 				<label class="sr-only" for="name">Name</label>
-				<input type="text" id="name" class="form-control" name="name"" placeholder="name" required>
+				<input type="text" id="name" class="form-control" name="name" placeholder="name" required>
 			</div>
 			<div class="form-group wow fadeInUp" data-wow-delay=".2s">
 				<label class="sr-only" for="email">Email address</label>
@@ -480,6 +498,12 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+	<!-- wow.min.min.js -->
+	<script src="js/wow.min.js"></script>
+
+	<!-- youtube-->
+	<script src="js/jquery.mb.YTPlayer.min.js"></script>
 
 	<!-- function.js -->
 	<script src="js/function.js"></script>
